fase-2/analytics-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
  namespace: toggle
  labels:
    app: analytics
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics-container
        image: 047719652987.dkr.ecr.us-east-2.amazonaws.com/tech-challenge/analytics-image:1.0
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        resources:
          requests:
            memory: "64Mi"
            cpu: "20m"
          limits:
            memory: "128Mi"
            cpu: "40m"
        ports:
        - containerPort: 8005
        livenessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 20
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
