fase-2/analytics-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: toggle
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
  type: ClusterIP
